package com.game.model;

import com.game.model.GameState;

public abstract class Game {
    GameState gameState;
}