package com.game.model;

//import com.game.model.Game;

public class NewGame extends Game{
}
