package com.game.model.creator;

public class ContinueGame extends Game {
    public ContinueGame() {
        super("Continue Game");
    }
}