package com.game.model.creator;

public abstract class GameCreator {
    public abstract Game createGame();
}